fix(white-theme): page spacing

--- a/src/gatsby-theme-carbon/templates/Homepage.module.scss
+++ b/src/gatsby-theme-carbon/templates/Homepage.module.scss
@@ -7,8 +7,8 @@
 }
 
 .row {
-  padding-top: $layout-05;
-  padding-bottom: $layout-05;
+  padding-top: $layout-04;
+  padding-bottom: carbon--mini-units(10);
   max-width: 74.25rem;
 }
 
@@ -50,7 +50,8 @@
 }
 
 .leadspace-text {
-  margin-top: $spacing-09;
+  margin-top: $layout-04;
+  margin-bottom: $layout-05;
   @include carbon--type-style("expressive-heading-05", true);
 
   @include carbon--breakpoint-down("md") {
@@ -60,10 +61,5 @@
 
 .leadspace-image {
   margin: auto;
-  margin-top: $spacing-07;
   width: 100%;
-
-  @include carbon--breakpoint("md") {
-    margin-top: $spacing-09;
-  }
 }
